Revision history for Module::Provision

0.7.1     2013-04-24 21:14:11
          - Added Rev keyword reset to update_version for git VCS

0.6.59    2013-04-24 05:10:52
          - Added ipc_srlock file to MANIFEST.SKIP
          - Tests use t directory as tempdir

0.5.57    2013-04-23 23:55:58
          - Added POD for update methods
          - Added Dist::Zilla::Plugin::ManifestInRoot :(
          - Added update_copyright_year and update_version

0.4.54    2013-04-23 00:22:42
          - Author tests now detect using $ENV{AUTHOR_TESTING}
          - Added comments to share/dist.ini and share/MI_Makefile.PL
          - Fixed spelling mistakes
          - Updated usage strings
          - Ignore meta files if VCS is SVN
          - Added 50 character text formatting to gitcommit-msg
          - Removed 45 character restriction on Git log header lines
          - Added support for command line abstracts

0.3.46    2013-04-16 23:18:07
          - Documented Emacs usage
          - Added optional v to distname in MANIFEST.SKIP
          - Added more tests
          - Added share to no_index
          - Bumped Class::Usul version number. Updated POD
          - Added author_id to stash
          - Added DZ and MI builders
          - Can create a test distribution in t with relative paths
          - Updated POD. Added novcs attribute
          - Propagated .gitpre-commit to share dir
          - Added .gitignore-rev to skip Rev keyword expansion in share dir
          - Use Perl::Version for better changelog headers

0.2.37    2013-04-05 14:00:09
          - Releasing
          - Renamed t/test_script.t to t/10test_script.t for consistancy

0.1.35    2013-04-05 13:37:11
          - Automated git commit messages from Changes file

0.1.34    2013-04-02
          - Added commit-msg hook
          - Updated inc::Bob to v1.11

0.1.30    2013-04-02
          - Updated inc::Bob to v1.9
          - Add global revision number to .gitpre-commit